# freetype-jni

./: .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md
example/src/: Example.java
freetype-jni/: Bitmap.java  CharMap.java  Face.java  FreeType.java  FreeTypeConstants.java  GlyphMetrics.java  GlyphSlot.java  Kerning.java  Library.java  LibraryVersion.java  Outline.java  Size.java  SizeMetrics.java  SizeRequest.java  Utils.java
freetype/builds/Win32/: freetype26MT_x86.exp  freetype26MT_x86.ilk  freetype26MT_x86.lib
freetype/builds/x64/: freetype26MT_x64.exp  freetype26MT_x64.ilk  freetype26MT_x64.lib
freetype/src/: com_pvporbit_freetype_FreeType.h  com_pvporbit_freetype_FreeType_FT_Render_Mode.h  com_pvporbit_freetype_Utils.h  freetype_jni.cpp
freetype/vc2015/: freetype.vcxproj  freetype.vcxproj.filters
jni/: freetype_jni.cpp
src/com/pvporbit/freetype/: Bitmap.java  CharMap.java  Face.java  FreeType.java  FreeTypeConstants.java  GlyphMetrics.java  GlyphSlot.java  Kerning.java  Library.java  LibraryVersion.java  Pointer.java  Size.java  SizeMetrics.java  SizeRequest.java  Utils.java
src/examples/: Example1.java
